web/book/tests/snapshots/snapshot__tests__prql__queries__functions-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "func interp low:0 high x -> (x - low) / (high - low)\n\nfrom students\nderive [\n  sat_proportion_1 = (interp 1600 sat_score),\n  sat_proportion_2 = (interp low:0 1600 sat_score),\n]\n"
---
SELECT
  *,
  (sat_score - 0) / 1600 AS sat_proportion_1,
  (sat_score - 0) / 1600 AS sat_proportion_2
FROM
  students

