web/book/tests/snapshots/snapshot__tests__prql__queries__functions-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "func cost_share cost -> cost / cost_total\n\nfrom costs\nselect [materials, labor, overhead, cost_total]\nderive [\n  materials_share = (cost_share materials),\n  labor_share = (cost_share labor),\n  overhead_share = (cost_share overhead),\n]\n"
---
SELECT
  materials,
  labor,
  overhead,
  cost_total,
  materials / cost_total AS materials_share,
  labor / cost_total AS labor_share,
  overhead / cost_total AS overhead_share
FROM
  costs

